# zed

./: Cargo.toml
assets/settings/: default.json
crates/collab/: Cargo.toml
crates/collab/src/tests/: test_server.rs
crates/language/src/: buffer.rs
crates/mega/: Cargo.toml
crates/mega/src/: api.rs  delegate.rs  mega.rs  mega_settings.rs
crates/mega_panel/: Cargo.toml
crates/mega_panel/src/: mega_panel.rs  mega_panel_settings.rs
crates/project/src/: project.rs
crates/project_panel/: Cargo.toml
crates/project_panel/src/: project_panel.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  zed.rs
