[package]
name = "mega_panel"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"
[lib]
path = 'src/mega_panel.rs'

[lints]
workspace = true

[dependencies]
mega.workspace = true
workspace.workspace = true
gpui.workspace = true
file_icons.workspace = true
settings.workspace = true
db.workspace = true
fs.workspace = true
util.workspace = true

anyhow.workspace = true
serde.workspace = true
schemars.workspace = true
